2009-06-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40389
	* tree-ssa-operands.c (get_modify_stmt_operands): Add NRV
	results to the addresses taken bitmap.
	* tree-scalar-evolution.c (scev_const_prop): Do not insert
	incomplete stmts into the instruction stream.

2009-06-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40460
	* tree-chrec.h (build_polynomial_chrec): If we cannot determine
	if there is no evolution of left in the loop bail out.
	* tree-chrec.c (chrec_fold_multiply_poly_poly): CSE one
	chrec_fold_multiply.

2009-06-11  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-11-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/38222
	* config/i386/i386.md (SWI248): New mode iterator.
	(popcount<mode>2): Rename from popcounthi2, popcountsi2 and
	popcounthi2 insn patterns. Macroize pattern using SWI248 mode
	iterator.  Generate popcnt mnemonic without mode extensions
	for Darwin x86 targets.
	(*popcount<mode>2_cmp): Ditto.
	(*popcountsi2_cmp_zext): Generate popcnt mnemonic without mode
	extensions for Darwin x86 targets.


2009-05-26  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-12-12  Zdenek Dvorak  <ook@ucw.cz>

	PR tree-optimization/32044
	* tree-scalar-evolution.h (expression_expensive_p): Declare.
	* tree-scalar-evolution.c (expression_expensive_p): New function.
	(scev_const_prop): Avoid introducing expensive expressions.
	* tree-ssa-loop-ivopts.c (may_eliminate_iv): Ditto.

2009-05-23  Eric Botcazou  <ebotcazou@adacore.com>

	* doc/passes.texi: Standardize spelling of RTL, Tree and Tree SSA.
	Remove outdated reference to flow.c and fix nits.
	* doc/gccint.texi: Tweak RTL description.
	* doc/rtl.texi: Likewise.

2009-05-21  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR rtl-optimization/40105
	Backport from mainline:

	2009-04-29  Eric Botcazou  <ebotcazou@adacore.com>
		    Steven Bosscher  <steven@gcc.gnu.org>

	* Makefile.in (cfgrtl.o): Add $(INSN_ATTR_H).
	* cfgrtl.c: Include insn-attr.h.